Added API for Addons! prob most used for events,
Cleaned up Listeners cleaned up code optimizations used less Deprecated code